# frozendict

./: LICENSE  README.md  frozendict.py  pyproject.toml  setup.py
