[tool.poetry]
name = "frozendict"
version = "0.1.0"
description = "Immutable dictionary implementation"
authors = ["Matt McCredie <mccredie+git@gmail.com>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.7"
typing_extensions = "^3.7"

[tool.poetry.dev-dependencies]
pytest = "^5.1"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
